    by Chris Nauroth via suresh)

    MAPREDUCE-5250. Searching for ';' in JobTracker History throws 
    ArrayOutOfBoundException. (kkambatl via tucu)

    HADOOP-9624. TestFSMainOperationsLocalFileSystem failed when the Hadoop test
    root path has "X" in its name. (Xi Fang via cnauroth)

    HADOOP-7140. IPC Reader threads do not stop when server stops
    (Todd Lipcon, backported by ivanmi)

Release 1.2.1 - Unreleased 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-4880. Print the image and edits file loaded by the namenode in the
    logs. (Arpit Agarwal via suresh)

  BUG FIXES

    MAPREDUCE-5206. Ensure that a job doesn't get added to RetiredJobs
    multiple times in JobTracker. (acmurthy)

    MAPREDUCE-5148. Fix MAPREDUCE-4970 to ensure task-log4j.properties is
    available for previous installs by putting it in hadoop-core.jar.
    (acmurthy)

    MAPREDUCE-3859. Fix CapacityScheduler to correctly compute runtime queue
    limits for high-ram jobs. (Sergey Tryuber via acmurthy)

    HDFS-4581. DataNode.checkDiskError should not be called on network errors.
    (Rohit Kochar via kihwal)

    HDFS-4699. Additional conditions for avoiding unnecessary 
    DataNode.checkDiskError calls. (Chris Nauroth via kihwal)

    HDFS-4261. Fix bugs in Balaner causing infinite loop and
    TestBalancerWithNodeGroup timing out.  (Junping Du via szetszwo)

    MAPREDUCE-5260. Fix JvmManager to deal better with corner-cases in
    shutting down. (zhaoyunjiong via acmurthy) 

    MAPREDUCE-5318. Escape ampersand in JSPUtil. (Bohou Li via acmurthy)

    HADOOP-9665. Fixed BlockDecompressorStream#decompress to return -1 rather
    than throw EOF at end of file. (Zhijie Shen via acmurthy)

    MAPREDUCE-5351. Fixed a memory leak in JobTracker due to stable FS objects in
    FSCache. (Sandy Ryza via acmurthy)

Release 1.2.0 - 2013.05.05

  INCOMPATIBLE CHANGES

    HDFS-4350. Make enabling of stale marking on read and write paths